Changes of Test::Snapshots

v0.02 2009.04.10

    Add lots of test cases
    Add lots of documentation
    Multiple test cases
    Limit test run time to a predefined timeout
    Check exit code as well
    Uploaded to Github

v0.01 2009.04.09
    First version released to CPAN